@@ -1,3 +1,11 @@
+2007-02-27  Rodney Dawes  <dobey@novell.com>
+
+	* python/A11yTestUtils.py (a11y_test_init): Update the argument checks
+	to handle values of None, '', or 0
+
+	* scripts/realplay.py: Update script to handle initial setup dialogs,
+	by copying the existin realplayerrc to a backup, and back when finished
+
 2007-02-26  Rodney Dawes  <dobey@novell.com>
 
 	* python/A11yTestUtils.py (a11y_test_init): Add another argument to
